[gd_scene load_steps=46 format=3 uid="uid://biqai14au81bh"]

[ext_resource type="Texture2D" uid="uid://bs2pasxx5bftp" path="res://assets/Monsters_Creatures_Fantasy/Skeleton/Attack.png" id="1_2btid"]
[ext_resource type="Script" uid="uid://85aiaqtei6el" path="res://scripts/states/enemy_base.gd" id="1_ygee8"]
[ext_resource type="Texture2D" uid="uid://ba7m6musttc8u" path="res://assets/Monsters_Creatures_Fantasy/Skeleton/Idle.png" id="2_dpndv"]
[ext_resource type="Texture2D" uid="uid://dxk138t18ukbi" path="res://assets/Monsters_Creatures_Fantasy/Skeleton/Walk.png" id="3_ygee8"]
[ext_resource type="Texture2D" uid="uid://8fcp0ni20n87" path="res://assets/Monsters_Creatures_Fantasy/Skeleton/Death.png" id="4_g22im"]
[ext_resource type="Texture2D" uid="uid://dmchxhjbkfh6q" path="res://assets/Monsters_Creatures_Fantasy/Skeleton/Take Hit.png" id="5_qqoon"]
[ext_resource type="Script" uid="uid://b7asdts4ly6ff" path="res://Enemies/Skeleton/state_machine.gd" id="6_g22im"]
[ext_resource type="Texture2D" uid="uid://q8dpe2fv4607" path="res://assets/Monsters_Creatures_Fantasy/Skeleton/Shield.png" id="7_pxdd2"]
[ext_resource type="Script" uid="uid://dshv77k0nnh0g" path="res://scripts/states/enemy_patrol.gd" id="7_v7rdr"]
[ext_resource type="PackedScene" uid="uid://c5oyf3hdtpewy" path="res://scenes/health.tscn" id="8_and3r"]
[ext_resource type="Script" uid="uid://bustyt866bace" path="res://scripts/states/enemy_chase.gd" id="9_ivhqf"]
[ext_resource type="Script" uid="uid://cnaeer6xvfh5i" path="res://scripts/states/enemy_attack.gd" id="10_vb502"]
[ext_resource type="Script" uid="uid://prsrjd5xwfrm" path="res://scripts/hadle_damage/hitbox.gd" id="13_pxdd2"]
[ext_resource type="Script" uid="uid://dmruf56l76xem" path="res://scripts/hadle_damage/hurtbox.gd" id="13_xxlxq"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_g22im"]
radius = 13.0
height = 46.0

[sub_resource type="AtlasTexture" id="AtlasTexture_v7rdr"]
atlas = ExtResource("1_2btid")
region = Rect2(0, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_and3r"]
atlas = ExtResource("1_2btid")
region = Rect2(150, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_ivhqf"]
atlas = ExtResource("1_2btid")
region = Rect2(300, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_vb502"]
atlas = ExtResource("1_2btid")
region = Rect2(450, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_jyjs1"]
atlas = ExtResource("1_2btid")
region = Rect2(600, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_qqoon"]
atlas = ExtResource("1_2btid")
region = Rect2(750, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_pxdd2"]
atlas = ExtResource("1_2btid")
region = Rect2(900, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_xxlxq"]
atlas = ExtResource("1_2btid")
region = Rect2(1050, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_cawwt"]
atlas = ExtResource("4_g22im")
region = Rect2(0, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_ey4fv"]
atlas = ExtResource("4_g22im")
region = Rect2(150, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_fxdb0"]
atlas = ExtResource("4_g22im")
region = Rect2(300, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_o2ibi"]
atlas = ExtResource("4_g22im")
region = Rect2(450, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_gon2m"]
atlas = ExtResource("5_qqoon")
region = Rect2(0, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_36cmo"]
atlas = ExtResource("5_qqoon")
region = Rect2(150, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_eh8mp"]
atlas = ExtResource("5_qqoon")
region = Rect2(300, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_fcncr"]
atlas = ExtResource("5_qqoon")
region = Rect2(450, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_jjepw"]
atlas = ExtResource("2_dpndv")
region = Rect2(0, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_n2ckn"]
atlas = ExtResource("2_dpndv")
region = Rect2(150, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_r768l"]
atlas = ExtResource("2_dpndv")
region = Rect2(300, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_usdt8"]
atlas = ExtResource("2_dpndv")
region = Rect2(450, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_y3vw4"]
atlas = ExtResource("7_pxdd2")
region = Rect2(0, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_e2eod"]
atlas = ExtResource("7_pxdd2")
region = Rect2(150, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_66284"]
atlas = ExtResource("7_pxdd2")
region = Rect2(300, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_wpc2t"]
atlas = ExtResource("7_pxdd2")
region = Rect2(450, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_2stv4"]
atlas = ExtResource("3_ygee8")
region = Rect2(0, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_ss4hf"]
atlas = ExtResource("3_ygee8")
region = Rect2(150, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_1hgxi"]
atlas = ExtResource("3_ygee8")
region = Rect2(300, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_e2m7b"]
atlas = ExtResource("3_ygee8")
region = Rect2(450, 0, 150, 150)

[sub_resource type="SpriteFrames" id="SpriteFrames_cawwt"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_v7rdr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_and3r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ivhqf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vb502")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jyjs1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qqoon")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pxdd2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xxlxq")
}],
"loop": false,
"name": &"attack",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_cawwt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ey4fv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fxdb0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o2ibi")
}],
"loop": false,
"name": &"death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_gon2m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_36cmo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eh8mp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fcncr")
}],
"loop": false,
"name": &"hurt",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jjepw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n2ckn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r768l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_usdt8")
}],
"loop": true,
"name": &"idle",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_y3vw4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e2eod")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_66284")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wpc2t")
}],
"loop": false,
"name": &"shield",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2stv4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ss4hf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1hgxi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e2m7b")
}],
"loop": true,
"name": &"walk",
"speed": 8.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_pxdd2"]
radius = 21.998642
height = 51.99728

[node name="Skeleton" type="CharacterBody2D"]
script = ExtResource("1_ygee8")
chase_range = 200.0

[node name="Health" parent="." instance=ExtResource("8_and3r")]
offset_left = -12.0
offset_top = -34.0
offset_right = 24.0
offset_bottom = -29.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(6, 1)
shape = SubResource("CapsuleShape2D_g22im")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_cawwt")
animation = &"attack"
autoplay = "idle"
frame = 7
frame_progress = 1.0

[node name="PatrolPoint" type="Node2D" parent="."]

[node name="Point1" type="Marker2D" parent="PatrolPoint"]
position = Vector2(-137, 0)

[node name="Point2" type="Marker2D" parent="PatrolPoint"]
position = Vector2(137, 1)

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("initial_state")]
script = ExtResource("6_g22im")
initial_state = NodePath("EnemyPatrol")

[node name="EnemyPatrol" type="Node" parent="StateMachine" node_paths=PackedStringArray("patrol_points")]
script = ExtResource("7_v7rdr")
patrol_points = NodePath("../../PatrolPoint")
metadata/_custom_type_script = "uid://dshv77k0nnh0g"

[node name="EnemyChase" type="Node" parent="StateMachine"]
script = ExtResource("9_ivhqf")
metadata/_custom_type_script = "uid://bustyt866bace"

[node name="EnemyAttack" type="Node" parent="StateMachine"]
script = ExtResource("10_vb502")
metadata/_custom_type_script = "uid://cnaeer6xvfh5i"

[node name="Hitbox" type="Area2D" parent="."]
script = ExtResource("13_pxdd2")
metadata/_custom_type_script = "uid://prsrjd5xwfrm"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2(47, -5)
rotation = 1.5694562
shape = SubResource("CapsuleShape2D_pxdd2")

[node name="Hurtbox" type="Area2D" parent="."]
script = ExtResource("13_xxlxq")
metadata/_custom_type_script = "uid://dmruf56l76xem"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2(6, 1)
shape = SubResource("CapsuleShape2D_g22im")
